Исправления по замечаниям