@@ -1,5 +1,7 @@
 package ru.otus.java.basic.hw9.employee;
 
+import ru.otus.java.basic.hw9.Utils;
+
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -12,10 +14,10 @@ public class EmployeeRoster {
      * @return list of names
      */
     public static List<String> getEmployeeNames(List<Employee> list) {
-        if (list == null) {
-            throw new IllegalArgumentException("list is null");
-        }
-        return list.stream().map(employee -> employee == null ? null : employee.getName()).toList();
+        Utils.validateNotNull(list, "list");
+        return list.stream()
+                .map(employee -> employee == null ? null : employee.getName())
+                .toList();
     }
 
     /**
@@ -26,10 +28,10 @@ public class EmployeeRoster {
      * @return list of employees as old as specified age
      */
     public static List<Employee> getEmployeesAsOldAs(List<Employee> list, int age) {
-        if (list == null) {
-            throw new IllegalArgumentException("list is null");
-        }
-        return list.stream().filter(employee -> employee != null && employee.getAge() >= age).toList();
+        Utils.validateNotNull(list, "list");
+        return list.stream()
+                .filter(employee -> employee != null && employee.getAge() >= age)
+                .toList();
     }
 
     /**
@@ -40,9 +42,7 @@ public class EmployeeRoster {
      * @return true if the employees' average age is greater or equal to specified age, false otherwise
      */
     public static boolean isEmployeesAverageAgeGreaterOrEquals(List<Employee> list, int age) {
-        if (list == null) {
-            throw new IllegalArgumentException("list is null");
-        }
+        Utils.validateNotNull(list, "list");
         return (list.stream().reduce(0.0, (sum, employee) -> employee == null ? sum : sum + employee.getAge(), Double::sum)
                 / list.stream().reduce(0, (count, employee) -> employee == null ? count : count + 1, Integer::sum)) >= age;
     }
@@ -51,12 +51,10 @@ public class EmployeeRoster {
      * Find the youngest employee in a list
      *
      * @param list list of employees
-     * @return Option of first youngest employee found in the list, or empty if not found
+     * @return The first youngest employee found on the list, or null if not found
      */
-    public static Optional<Employee> getYoungestEmployee(List<Employee> list) {
-        if (list == null) {
-            throw new IllegalArgumentException("list is null");
-        }
+    public static Employee getYoungestEmployee(List<Employee> list) {
+        Utils.validateNotNull(list, "list");
         Employee result = null;
         for (Employee employee : list) {
             if (employee != null) {
@@ -65,7 +63,7 @@ public class EmployeeRoster {
                 }
             }
         }
-        return result == null ? Optional.empty() : Optional.of(result);
+        return result;
     }
 
     public static void main(String[] args) {
@@ -75,10 +73,22 @@ public class EmployeeRoster {
                 new Employee("Sidoroff", 25)
         );
         System.out.println("getEmployeeNames(tetList) = " + getEmployeeNames(testList));
-        System.out.println("getEmployeesAsOldAs(testList, 35).stream().map(Employee::getName).collect(Collectors.toList()) = "
-                + getEmployeesAsOldAs(testList, 35).stream().map(Employee::getName).toList());
-        System.out.println("isEmployeesAverageAgeGreaterOrEquals(testList, 35) = " + isEmployeesAverageAgeGreaterOrEquals(testList, 35));
-        System.out.println("getYoungestEmployee(testList).stream().map(Employee::getName).findAny().orElse(\"Not Found\") = "
-                + getYoungestEmployee(testList).stream().map(Employee::getName).findAny().orElse("Not Found"));
+        System.out.println(
+                "getEmployeesAsOldAs(testList, 35).stream().map(Employee::getName).collect(Collectors.toList()) = "
+                        + getEmployeesAsOldAs(testList, 35)
+                        .stream()
+                        .map(Employee::getName)
+                        .toList()
+        );
+        System.out.println(
+                "isEmployeesAverageAgeGreaterOrEquals(testList, 35) = "
+                        + isEmployeesAverageAgeGreaterOrEquals(testList, 35)
+        );
+        System.out.println(
+                "Optional.ofNullable(getYoungestEmployee(testList)).map(Employee::getName).orElse(\"Not Found\") = "
+                        + Optional.ofNullable(getYoungestEmployee(testList))
+                        .map(Employee::getName)
+                        .orElse("Not Found")
+        );
     }
 }
